@@ -121,6 +121,8 @@ regs *pic16_allocRegByName (char *name, int size );
 
 regs* newReg(short type, short pc_type, int rIdx, char *name, int size, int alias, operand *refop);
 
+int IS_CONFIG_ADDRESS(int address);
+
 /* Define register address that are constant across PIC16 family */
 #define IDX_TMR0    0xfd6
 #define IDX_PCL     0xff9
